# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-metadata"
version = "0.1.0"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres="0.19.5"
tokio-postgres = "0.7.8"
tokio = { version = "1", features = ["full"] }

prost = "0.11"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11"

[build-dependencies]
prost-build = "0.11"