# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-metadata"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres="0.19.5"
tokio-postgres = {version = "0.7.8", features=["default", "with-serde_json-1", "array-impls"]}


tokio = { version = "1", features = ["full"] }
proto = { path = "../proto" }
prost = "0.11"

uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
serde_json-1 = { version = "1.0", package = "serde_json"}

