# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "proto"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = "0.11"

[build-dependencies]
prost-build = "0.11"

[target.'cfg(target_os = "linux")'.build-dependencies]
protobuf-src = "1.1.0"