[package]
name = "lakesoul-common"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
arrow-schema = { workspace = true }
arrow-ipc = { workspace = true }
tracing.workspace = true
md5 = "0.7.0"

[lints]
workspace = true
