[package]
name = "lakesoul-console"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
# lakesoul
lakesoul-datafusion = { path = "../lakesoul-datafusion" }
# datafusion
datafusion = { workspace = true }
# runtime
tokio = { workspace = true }
# cli
clap = { workspace = true }
rustyline = "16.0.0"
# async
futures = "0.3"
# rand
rand = { workspace = true }
# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
# error
rootcause = { workspace = true }

[lints]
workspace = true
