[package]
name = "lakesoul-datafusion-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion = { workspace = true }
lakesoul-datafusion = { path = "../lakesoul-datafusion" }
clap = { workspace = true }
tpchgen = { git = "https://github.com/mag1c1an1/tpchgen-rs.git", rev = "5398e6d" }
tpchgen-arrow = { git = "https://github.com/mag1c1an1/tpchgen-rs.git", rev = "5398e6d" }
anyhow = { workspace = true }
tokio = { workspace = true }
