# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-datafusion"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "console"
path = "src/bin/console.rs"


[dependencies]
datafusion = { workspace = true }
object_store = { workspace = true }
arrow = { workspace = true }
arrow-cast = { workspace = true }
arrow-arith = { workspace = true }
arrow-ipc = { workspace = true }
arrow-flight = { workspace = true }
parquet = { workspace = true }
lakesoul-io = { path = "../lakesoul-io" }
lakesoul-metadata = { path = "../lakesoul-metadata" }
proto = { path = "../proto" }
prost = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["unstable-locales"] }
json = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
tonic = { workspace = true }
serde-aux = "4.6.0"
rustyline = "15"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
clap = { workspace = true }


[dev-dependencies]
ctor = "0.4"
test-log = { version = "0.2.14", features = ["trace"] }
rand = {workspace = true}
rand_chacha = {workspace = true}

[features]
ci = []
