# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-datafusion"
version = "3.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-common = { workspace = true }
object_store = { workspace = true }
arrow = { workspace = true }
arrow-cast = { workspace = true }
arrow-arith = { workspace = true }
arrow-ipc = { workspace = true }
arrow-flight = { workspace = true }
parquet = { workspace = true }
lakesoul-io = { path = "../lakesoul-io" }
lakesoul-metadata = { path = "../lakesoul-metadata" }
proto = { path = "../proto" }
prost = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["unstable-locales"] }
json = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
tonic = { workspace = true }
serde-aux = "4.6.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tpchgen = { git = "https://github.com/mag1c1an1/tpchgen-rs.git", rev = "5398e6d" }
tpchgen-arrow = { git = "https://github.com/mag1c1an1/tpchgen-rs.git", rev = "5398e6d" }
log = "0.4.27"

[dev-dependencies]
ctor = "0.4"
test-log = { version = "0.2.14", features = ["trace"] }
rand = { workspace = true }
rand_chacha = { workspace = true }

[features]
ci = []
