# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-datafusion"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# lakesoul
lakesoul-io = { path = "../lakesoul-io" }
lakesoul-metadata = { path = "../lakesoul-metadata" }
proto = { path = "../proto" }
# datafusion
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-common = { workspace = true }
# arrow
arrow = { workspace = true }
arrow-cast = { workspace = true }
arrow-arith = { workspace = true }
arrow-ipc = { workspace = true }
arrow-flight = { workspace = true }
parquet = { workspace = true }
object_store = { workspace = true }
# protobuf
prost = { workspace = true }
# async
futures = { workspace = true }
async-trait = { workspace = true }
# runtime
tokio = { workspace = true }
# web
tonic = { workspace = true }
# cli
clap = { workspace = true }
# rand
rand = { workspace = true }
# utils
uuid = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
# time
chrono = { version = "0.4", features = ["unstable-locales"] }
# serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde-aux = "4.6.0"
json = "0.12"
# tpch
tpchgen = { git = "https://github.com/mag1c1an1/tpchgen-rs.git", rev = "6db43b174fbf" }
tpchgen-arrow = { git = "https://github.com/mag1c1an1/tpchgen-rs.git", rev = "6db43b174fbf" }
# adbc
adbc_core = { version = "0.21.0", optional = true }
adbc_driver_manager = { version = "0.21.0", optional = true }
# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = "0.4.27"
# error
rootcause = { workspace = true }

[dev-dependencies]
ctor = "0.4"
test-log = { version = "0.2.14", features = ["trace"] }
rand = { workspace = true }

[features]
ci = []
adbc = ["dep:adbc_core", "dep:adbc_driver_manager"]

[lints]
workspace = true
