[package]
name = "lakesoul-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "flight_sql_server"
path = "examples/flight/flight_sql_server.rs"

[dependencies]
tokio = {workspace = true}
tonic = {workspace = true}
lakesoul-datafusion = { path = "../lakesoul-datafusion" }
lakesoul-flight = { path = "../lakesoul-flight" }
lakesoul-metadata = { path = "../lakesoul-metadata" }
env_logger = {workspace = true}
log = {workspace = true}
bytes = "1.7.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

[build-dependencies]
tonic-build = {workspace = true}