[package]
name = "lakesoul-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "flight_sql_server"
path = "examples/flight/flight_sql_server.rs"

[[bin]]
name = "flight_sql_server"
path = "examples/flight/flight_sql_server.rs"

[dependencies]
tokio = {workspace = true}
tonic = {workspace = true}
arrow-flight = { workspace = true }
lakesoul-datafusion = { path = "../lakesoul-datafusion" }
lakesoul-flight = { path = "../lakesoul-flight" }
lakesoul-metadata = { path = "../lakesoul-metadata" }
env_logger = {workspace = true}
log = {workspace = true}
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
metrics-exporter-prometheus = "0.12"
metrics = "0.21"
bytes = "1.7.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
clap = { version = "4.4", features = ["derive"] }
regex = "1.11.0"

[build-dependencies]
tonic-build = {workspace = true}