# SPDX-FileCopyrightText: LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-flight"
version = "0.1.0"
edition = "2021"

[dependencies]
lakesoul-datafusion = { path = "../lakesoul-datafusion" }
lakesoul-metadata = { path = "../lakesoul-metadata" }
lakesoul-io = { path = "../lakesoul-io" }
arrow-flight = { workspace = true }
tokio = { workspace = true }
chrono = { version = "0.4" }
tonic = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
arrow = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
dashmap = "5.5.3"
datafusion = { workspace = true }
object_store = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
http = { workspace = true }
jsonwebtoken = { version = "9", default-features = false }
serde = { workspace = true }
metrics = "0.24"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["trace"] }
clap = { workspace = true }
rand = { workspace = true }
metrics-exporter-prometheus = "0.16"
bytes = "1.7.1"
serde_json = "1.0.133"
regex = "1.11.0"
tracing-subscriber = { workspace = true }

[features]
hdfs = ["lakesoul-io/hdfs"]
default = []

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-cast = { workspace = true }
arrow = { workspace = true, features = ["test_utils"] }
futures = { workspace = true }
test-log = { version = "0.2.14" }
datafusion = { workspace = true }
lakesoul-datafusion = { path = "../lakesoul-datafusion" }
anyhow.workspace = true