# SPDX-FileCopyrightText: LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-flight"
version = "3.0.0"
edition = "2024"

[dependencies]
# lakesoul
lakesoul-datafusion = { path = "../lakesoul-datafusion" }
lakesoul-metadata = { path = "../lakesoul-metadata" }
lakesoul-io = { path = "../lakesoul-io" }
# datafusion
datafusion = { workspace = true }
# arrow
arrow = { workspace = true }
arrow-flight = { workspace = true }
object_store = { workspace = true }
# async
futures = { workspace = true }
async-trait = { workspace = true }
# runtime
tokio = { workspace = true }
# time
chrono = { workspace = true }
# web
tonic = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.4", features = ["trace"] }
jsonwebtoken = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = "0.16"
# serialization
serde = { workspace = true }
serde_json = { workspace = true }
# protobuf
prost = { workspace = true }
# cli
clap = { workspace = true }
# utils
url = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
dashmap = "5.5.3"
# rand
rand = { workspace = true }
# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# err
rootcause = { workspace = true }

[features]
hdfs = ["lakesoul-io/hdfs"]
default = []

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-cast = { workspace = true }
arrow = { workspace = true, features = ["test_utils"] }
futures = { workspace = true }
test-log = { workspace = true }
lakesoul-datafusion = { path = "../lakesoul-datafusion" }
rootcause.workspace = true

[lints]
workspace = true
