# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-io-c"
version = "2.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lakesoul-io = { path = "../lakesoul-io" }
arrow = { workspace = true, features = ["ffi"] }
arrow-ipc = { workspace = true }
tokio = { version = "1", features = ["full"] }
bytes = { workspace = true }
proto = { path = "../proto" }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[target.'cfg(target_os = "windows")'.dependencies]
datafusion-substrait = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
datafusion-substrait = { workspace = true, features = ["protoc"] }


[features]
hdfs = ["lakesoul-io/hdfs"]
default = []

[build-dependencies]
cbindgen = "0.24.0"
