# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-io-c"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
# lakesoul
lakesoul-io = { path = "../lakesoul-io" }
proto = { path = "../proto" }
# datafusion
datafusion-common = { workspace = true }
datafusion-substrait = { workspace = true }
# arrow
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
# runtime
tokio = { workspace = true }
# utils
bytes = { workspace = true }
# protobuf
prost = { workspace = true }
# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# err
rootcause = { workspace = true }
base64 = { version = "0.22", features = ["std"] }

[features]
hdfs = ["lakesoul-io/hdfs"]
default = []

[build-dependencies]
cbindgen = "0.29.0"

[lints]
workspace = true
