# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-io"
version = "3.0.0"
edition = "2024"

[[bench]]
name = "buf_bench"
harness = false

[[bench]]
name = "spill_bench"
harness = false

[dependencies]
# lakesoul
proto = { path = "../proto" }
# datafusion
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-common-runtime = { workspace = true }
datafusion-catalog-listing = { workspace = true }
datafusion-session = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-datasource = { workspace = true }
datafusion-datasource-parquet = { workspace = true }
datafusion-substrait = { workspace = true }
# arrow
arrow = { workspace = true, features = ["prettyprint"] }
arrow-schema = { workspace = true, features = ["serde"] }
arrow-array = { workspace = true, features = ["chrono-tz"] }
arrow-buffer = { workspace = true }
arrow-cast = { workspace = true }
parquet = { workspace = true, features = ["async", "arrow", "encryption"] }
object_store = { workspace = true }
# memory
tikv-jemallocator = "0.6"
# 用于查询监控指标
tikv-jemalloc-ctl = {version = "0.6", features = ["stats"] }
# async
futures = { workspace = true }
async-trait = { workspace = true }
# runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
# serialization
serde = { workspace = true }
serde_json = { workspace = true }
# protobuf
prost = { workspace = true }
# cache
moka = { version = "~0.12", features = ["future"] }
# hdfs
hdrs = { git = "https://github.com/lakesoul-io/hdrs.git", branch = "main", features = [
  "async_file",
], optional = true }
hdfs-sys = { version = "0.3", default-features = false, features = [
  "hdfs_3_3",
], optional = true }
# rand
rand = { workspace = true }
# utils
atomic_refcell = { workspace = true }
derivative = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
half = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
educe = "0.6"
smallvec = "1.10"
dary_heap = "0.3"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
hex = "0.4"
dhat = { version = "0.3.3", optional = true }
ndarray = "0.15.6"
nohash = "0.2.0"
tempfile = "3"
sysinfo = "~0.32"
walkdir = "2.5.0"
num_cpus = "1.16"
filetime = "0.2.25"
linked-hash-map = "0.5.6"
itertools = { workspace = true}
# time
chrono = "0.4"
# logging
tracing = { workspace = true }
# error
rootcause = { workspace = true }
fs-err = "3.1.0"

[features]
hdfs = ["dep:hdrs", "dep:hdfs-sys"]
default = []
dhat-heap = ["dep:dhat"]            # if you are doing heap profiling
dhat-ad-hoc = []                    # if you are doing ad hoc profiling
jemalloc = []

[dev-dependencies]
tokio-test = "0.4.4"
test-log = { version = "0.2.14", features = ["trace"] }
rand_distr = { workspace = true }
comfy-table = "6.0"
tempfile = "3.3.0"
whoami = "1.5"
tracing-subscriber = "0.3.18"
criterion = { version = "0.7", features = ["html_reports"] }

[lints]
workspace = true
