# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-metadata-c"
version = "3.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lakesoul-metadata = { path = "../lakesoul-metadata" }
proto = { path = "../proto" }
prost = { workspace = true }
serde_json = "1.0.111"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }