# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-metadata"
version = "3.0.0"
edition = "2024"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.5"
tokio-postgres = { version = "0.7.8", features = ["default", "with-serde_json-1", "with-uuid-1", "array-impls", "with-chrono-0_4"] }
bb8-postgres = "0.8.1"
postgres-types = { version = "0.2.5", features = ["derive"] }
bytes = { version = "1.5.0" }
chrono = "0.4"

tokio = { workspace = true }
proto = { path = "../proto" }
prost = { workspace = true }

num_enum = "0.5.1"
uuid = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = "1.10.3"
serde = { workspace = true }
async-trait = "0.1"
md5 = "0.7.0"
cached = { workspace = true }
jsonwebtoken = { version = "9", default-features = false }

[dev-dependencies]
test-log = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
