# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-metadata"
version = { workspace = true }
edition = { workspace = true }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pg
postgres = "0.19.5"
tokio-postgres = { version = "0.7.8", features = [
  "default",
  "with-serde_json-1",
  "with-uuid-1",
  "array-impls",
  "with-chrono-0_4",
] }
bb8-postgres = "0.8.1"
postgres-types = { version = "0.2.5", features = ["derive"] }
# utils
bytes = { version = "1.5.0" }
# time
chrono = "0.4"
# async
async-trait = "0.1"
# runtime
tokio = { workspace = true }
# serialization
serde = { workspace = true }
serde_json = { workspace = true }
# protobuf
proto = { path = "../proto" }
prost = { workspace = true }
# cache
cached = { workspace = true }
# web
jsonwebtoken = { version = "9", default-features = false }
# utils
num_enum = "0.5.1"
uuid = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
md5 = "0.7.0"
# logging
tracing = { workspace = true }
# error
rootcause = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
test-log = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
