# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-s3-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
lakesoul-metadata = { path = "../lakesoul-metadata" }
pingora = { version = "0.5.0", features = ["lb", "openssl"] }
pingora-core = { version = "0.5.0", features = ["openssl"] }
async-trait="0.1"
hickory-resolver = "0.24.4"
aws-sigv4 = "1.3.3"
aws-smithy-http = "0.60.12"
aws-smithy-runtime-api = "1.8.5"
aws-credential-types = "1.2.1"
aws-config = "1.8.3"
arc-swap = "1.7.1"
anyhow = "1.0.96"
http = "1.0.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = {workspace = true}
lazy_static = "1.5"
tower-service = "0.3"
prometheus = { version = "0.13", features = ["process"] }
bytes = "1.0"
