# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-s3-proxy"
version = "3.0.0"
edition = "2024"

[dependencies]
lakesoul-metadata = { path = "../lakesoul-metadata" }
pingora = { version = "0.8.0", features = ["lb", "openssl"] }
pingora-core = { version = "0.8.0", features = ["openssl"] }
async-trait = { workspace = true }
hickory-resolver = "0.24.4"
aws-sigv4 = "1.3.3"
aws-smithy-http = "0.60.12"
aws-smithy-runtime-api = "1.8.5"
aws-credential-types = "1.2.1"
aws-config = "1.8.3"
arc-swap = "1.7.1"
anyhow = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lazy_static = { workspace = true }
tower-service = "0.3"
prometheus = { version = "0.13", features = ["process"] }
bytes = { workspace = true }
uuid = { workspace = true }
ring = { version = "0.17", features = ["std"] }
rand = { workspace = true }
base64 = { version = "0.22", features = ["std"] }
url = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
quick-xml = { version = "0.38", features = ["serialize"] }
regex = { workspace = true }
pad = "0.1"
reqwest = "0.12"
hex = { workspace = true }

[dev-dependencies]
lakesoul-io = { path = "../lakesoul-io" }
lakesoul-datafusion = { path = "../lakesoul-datafusion" }
proto = { path = "../proto" }
arrow = { workspace = true }
arrow-array = { workspace = true }
serde_json = { workspace = true }
rootcause = { workspace = true, features = ["compat-anyhow1"] }

[lints]
workspace = true
