# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "experiment"
version = "0.1"
authors = []
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = ["pandas", "seaborn", "matplotlib"]

[tool.ruff]
line-length = 88
