[project]
name = "e2etest"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "mag1c1an1", email = "mag1cian@icloud.com" }]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "kubernetes>=33.1.0",
    "opendal>=0.46.0",
    "psycopg[binary]>=3.2.9",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[project.scripts]
e2etest = "e2etest:main"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

